--- a/XMLParserConsoleTester/XMLParserConsoleClient/App.config
+++ b/XMLParserConsoleTester/XMLParserConsoleClient/App.config
@@ -1,16 +1,14 @@
-<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
   </startup>
   <system.serviceModel>
-    <services>
-      <service name="XMLParserWCFService.XMLParserService">
+    <client>
         <endpoint address 
             ="http://localhost:8090/XMLParserWCFService/XMLParserWCFService"
    binding = "wsHttpBinding" contract="XMLParserWCFService.IXMLParserService">
         </endpoint>
-      </service>
-    </services>
+    </client>
   </system.serviceModel>
 </configuration>
