--- a/XMLParserConsoleTester/XMLParserWCFClient/App.config
+++ b/XMLParserConsoleTester/XMLParserWCFClient/App.config
@@ -4,6 +4,21 @@
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
   </startup>
   <system.serviceModel>
+    <client>
+      <endpoint address 
+            ="http://localhost:8090/XMLParserWCFService/XMLParserWCFService"
+ binding = "wsHttpBinding" contract="XMLParserWCFService.IXMLParserService">
+      </endpoint>
+    </client>
+  </system.serviceModel>
+</configuration>
+
+<!--<?xml version="1.0" encoding="utf-8" ?>
+<configuration>
+  <startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
+  </startup>
+  <system.serviceModel>
     <services>
       <service name="XMLParserWCFService.XMLParserService">
         <endpoint address 
@@ -13,4 +28,4 @@
       </service>
     </services>
   </system.serviceModel>
-</configuration>
+</configuration>-->
